--- a/indes.html
+++ b/indes.html
@@ -1,10 +1,10 @@
 <html lang="en">
  <head>
-  <meta name="google-site-verification" content="Br1IDzyG6VLhhrqBXTS3CR3pvp_HhCFKdxUTxPYHStc" />
+  <meta name="google-site-verification" content="r3br7KelP343f2yFFr1Aoq3vR3ktcxuQzc5yKhURxLk" />
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Movers and Packers
+   Movers and Pickers
   </title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
