--- a/indes.html
+++ b/indes.html
@@ -1,19 +1,4 @@
-<html lang="en">
- <head>
-  <meta name="google-site-verification" content="r3br7KelP343f2yFFr1Aoq3vR3ktcxuQzc5yKhURxLk" />
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Movers and Pickers
-  </title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
+ </style>
  </head>
  <body class="bg-[#19375f] text-white">
   <!-- Slider Section -->
@@ -264,24 +249,24 @@
      <p class="text-center mb-4 text-sm md:text-base">
       <i class="fas fa-map-marker-alt mr-1">
       </i>
-      Gulberg-III,
+      ALL CITY 
       <br/>
-      Lahore, Pakistan.
+      DUBIA ALLL CITY 
      </p>
      <p class="text-center mb-1 text-sm md:text-base">
       <i class="fas fa-phone mr-1">
       </i>
-      +92-42-35763038
+      +971569235484
      </p>
      <p class="text-center mb-1 text-sm md:text-base">
       <i class="fas fa-phone mr-1">
       </i>
-      +92-42-35775680
+      +971569235484
      </p>
      <p class="text-center text-sm md:text-base flex justify-center items-center gap-2">
       <i class="fas fa-mobile-alt">
       </i>
-      +92-321-4108433
+      +971569235484
       <button class="ml-2 bg-[#004a8f] text-white text-xs md:text-sm px-3 py-1 rounded font-semibold italic hover:bg-[#003a6f] transition" type="button">
        Call Now
       </button>
@@ -315,13 +300,13 @@
       Get in Touch
      </p>
      <p>
-      Gulberg-III,
+      Dubai 
      </p>
      <p>
-      Lahore, Pakistan.
+      Dubai.
      </p>
      <p>
-      Phone: +92-42-35763038, +92-42-35775680
+      Phone: +971569235484
      </p>
      <p>
       Mobile: +92-321-4108433
